# rv32i-asm

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: ExternalLibraries.cmake
include/assembler/: assembler.hpp  cpu_ctx.hpp  instruction_base.hpp  instructions_fabric.hpp  tokenizer.hpp
include/assembler/rv32i/: ar_ops.hpp  ctrl_tr.hpp  ctx.hpp  imm_ops.hpp  load_inst.hpp  store_inst.hpp
include/assembler/rv32i/b-type/: branch_inst.hpp
include/assembler/rv32i/i-type/: addi.hpp  ctrl_tr.hpp  i-type_base.hpp  imm_ops.hpp  load_inst.hpp
include/assembler/rv32i/rv32i_utils/: utils.hpp
include/assembler/rv32i/u-type/: upper_imm_inst.hpp
include/assembler/utils/: utils.hpp
src/: main.cpp
src/assembler/: assembler.cpp  cpu_ctx.cpp  instruction_base.cpp  instructions_fabric.cpp  tokenizer.cpp
src/assembler/rv32i/: ar_ops.cpp  branch_inst.cpp  ctrl_tr.cpp  imm_ops.cpp  load_inst.cpp  store_inst.cpp  upper_imm_inst.cpp
src/assembler/rv32i/i-type/: addi.cpp  i-type_base.cpp  imm_ops.cpp  load_inst.cpp
src/assembler/rv32i/j-type/: ctrl_tr.cpp
src/assembler/rv32i/r-type/: ar_ops.cpp
src/assembler/rv32i/rv32i_utils/: utils.cpp
src/assembler/rv32i/s-type/: store_inst.cpp
src/assembler/rv32i/utils/: utils.cpp
src/assembler/utils/: utils.cpp
tests/: CMakeLists.txt  test_rv32i_asm.cpp  test_rv32i_assemblers.cpp
